--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,6 +191,8 @@ target_include_directories(
   PUBLIC $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>
   PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
   PUBLIC $<BUILD_INTERFACE:${GSL_LITE_INCLUDE_DIR}>
+  PUBLIC $<INSTALL_INTERFACE:${CMAKE_INSTALL_DATADIR}/amici/swig>
+  PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/swig>
   PRIVATE ${SUNDIALS_PRIVATE_INCLUDE_DIRS})
 
 if(NOT "${BLAS_INCLUDE_DIRS}" STREQUAL "")
@@ -324,6 +326,7 @@ install(
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Amici)
 
 install(DIRECTORY ThirdParty/gsl/ TYPE INCLUDE)
+install(DIRECTORY swig DESTINATION ${CMAKE_INSTALL_DATADIR}/amici/)
 
 #Register package?
 option(EXPORT_PACKAGE "Export AMICI library to CMake package registry?" ON)
