--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -16,6 +16,7 @@ jobs:
       AMICI_SKIP_CMAKE_TESTS: "TRUE"
       openBLAS_version: "0.3.19"
       AMICI_DLL_DIRS: "C:\\BLAS\\bin"
+      LIB: "C:/BLAS/lib"
 
     strategy:
       matrix:
