--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -325,7 +325,7 @@ install(
         ${CMAKE_CURRENT_BINARY_DIR}/AmiciConfigVersion.cmake
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Amici)
 
-install(DIRECTORY ThirdParty/gsl TYPE INCLUDE)
+install(DIRECTORY ThirdParty/gsl/gsl TYPE INCLUDE)
 install(DIRECTORY swig DESTINATION ${CMAKE_INSTALL_DATADIR}/amici)
 
 #Register package?
