--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ foreach(FLAG ${MY_CXX_FLAGS})
 endforeach(FLAG)
 
 # Debug build?
-if($ENV{ENABLE_AMICI_DEBUGGING} OR $ENV{ENABLE_GCOV_COVERAGE})
+if("$ENV{ENABLE_AMICI_DEBUGGING}" OR "$ENV{ENABLE_GCOV_COVERAGE}")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -UNDEBUG")
     set(CMAKE_BUILD_TYPE "Debug")
 
