--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,28 +34,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Compiler flags
 include(CheckCXXCompilerFlag)
-set(MY_CXX_FLAGS
-    -Wall
-    # MSVC
-    #
-    # hide copyright message
-    -nologo
-    # -wd4820: hide padding
-    -wd4820
-    # hide unreferenced inline function removed
-    -wd4514
-    # hide not inlined
-    -wd4710
-    # hide auto-inlined
-    -wd4711
-    # hide copy-ctor implicitly deleted
-    -wd4625
-    # hide assignment-ctor implicitly deleted
-    -wd4626
-    # hide spectre mitigation
-    -wd5045
-    # hide enum-switch no explicitly handled
-    -wd4061)
+set(MY_CXX_FLAGS -Wall)
 foreach(FLAG ${MY_CXX_FLAGS})
   unset(CUR_FLAG_SUPPORTED CACHE)
   check_cxx_compiler_flag(${FLAG} CUR_FLAG_SUPPORTED)
