Fix CPU time tracking with multi-threading (partially)
Track thread-specific CPU time in case `boost::chrono` is available (package `libboost-chrono-dev` on Ubuntu).

--- a/.github/workflows/test_python_cplusplus.yml
+++ b/.github/workflows/test_python_cplusplus.yml
@@ -56,6 +56,7 @@ jobs:
             g++ \
             libatlas-base-dev \
             libboost-serialization-dev \
+            libboost-chrono-dev \
             libhdf5-serial-dev \
             python3-venv \
             swig \
