--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -5,6 +5,9 @@ FROM ubuntu:22.04
 RUN apt-get update && apt-get install -y \
     g++ \
     libatlas-base-dev \
+    libboost-serialization-dev \
+    libboost-chrono-dev \
+    libhdf5-serial-dev \
     python-is-python3 \
     python3 \
     python3-dev \
