--- a/python/sdist/MANIFEST.in
+++ b/python/sdist/MANIFEST.in
@@ -1,6 +1,7 @@
 recursive-include amici/ThirdParty/SuiteSparse *
 recursive-include amici/ThirdParty/sundials *
 recursive-include amici/ThirdParty/gsl *.hpp
+recursive-include amici/cmake *
 recursive-include amici/include/amici *.h
 recursive-include amici/swig *.i *.h
 include amici/*
